test/langtools/tools/javac/valhalla/lworld-values/CheckSync.out
CheckSync.java:18:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:19:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:20:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:21:19: compiler.err.value.class.does.not.support: notify
CheckSync.java:22:22: compiler.err.value.class.does.not.support: notifyAll
CheckSync.java:23:13: compiler.warn.has.been.deprecated.for.removal: finalize(), java.lang.Object
CheckSync.java:23:21: compiler.err.value.class.does.not.support: finalize
CheckSync.java:31:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:32:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:33:18: compiler.warn.has.been.deprecated.for.removal: java.lang.Integer(int), java.lang.Integer
CheckSync.java:33:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:34:18: compiler.warn.has.been.deprecated.for.removal: java.lang.Long(long), java.lang.Long
CheckSync.java:34:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:35:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:36:17: compiler.err.value.class.does.not.support: wait
CheckSync.java:37:19: compiler.err.value.class.does.not.support: notify
CheckSync.java:38:22: compiler.err.value.class.does.not.support: notifyAll
14 errors
3 warnings
